# luagit2

./: .gitignore  CMakeLists.txt  COPYRIGHT  LIBGIT2_VERSION  README.md  blob.nobj.lua  commit.nobj.lua  config.h.cmake  database.nobj.lua  database_backend.nobj.lua  error.nobj.lua  git2.luadoc  git2.nobj.lua  index.html  index.nobj.lua  index_entry.nobj.lua  lua-git2-scm-0.rockspec  object.nobj.lua  oid.nobj.lua  otype.nobj.lua  pre_generated-git2.nobj.c  rawobject.nobj.lua  repository.nobj.lua  revwalk.nobj.lua  signature.nobj.lua  tag.nobj.lua  template.nobj.lua  template.rockspec  test_backend.lua  test_rep.git.tbz  test_rep.lua  tree.nobj.lua  tree_entry.nobj.lua  utils.lua
.github/workflows/: main.yml
cmake/: LuaNativeObjects.cmake
docs/: git2.luadoc  index.html
docs/git2/: Blob.luadoc  Commit.luadoc  Config.luadoc  Index.luadoc  IndexEntry.luadoc  ODB.luadoc  OID.luadoc  Object.luadoc  OdbObject.luadoc  Reference.luadoc  Repository.luadoc  RevWalk.luadoc  Signature.luadoc  StrArray.luadoc  Tag.luadoc  Tree.luadoc  TreeEntry.luadoc
docs/modules/: Blob.html  Commit.html  Config.html  Index.html  IndexEntry.html  IndexEntryUnmerged.html  ODB.html  ODBBackend.html  OID.html  OID_Shorten.html  Object.html  OdbObject.html  Reference.html  Repository.html  RevWalk.html  Signature.html  StrArray.html  Tag.html  Tree.html  TreeEntry.html  git2.html
git2/: Blob.luadoc  Commit.luadoc  Config.luadoc  Index.luadoc  IndexEntry.luadoc  IndexEntryUnmerged.luadoc  ODB.luadoc  ODBBackend.luadoc  OID.luadoc  OID_Shorten.luadoc  Object.luadoc  OdbObject.luadoc  Reference.luadoc  Repository.luadoc  RevWalk.luadoc  Signature.luadoc  StrArray.luadoc  Tag.luadoc  Tree.luadoc  TreeEntry.luadoc
modules/: Blob.html  Commit.html  Config.html  Index.html  IndexEntry.html  IndexEntryUnmerged.html  ODB.html  ODBBackend.html  OID.html  OID_Shorten.html  Object.html  OdbObject.html  Reference.html  Repository.html  RevWalk.html  Signature.html  StrArray.html  Tag.html  Tree.html  TreeEntry.html  git2.html
rockspecs/: lua-git2-0.1-1.rockspec  lua-git2-0.1.rockspec
src/: blob.nobj.lua  commit.nobj.lua  config.nobj.lua  database.nobj.lua  database_backend.nobj.lua  error.nobj.lua  index.nobj.lua  index_entry.nobj.lua  index_entry_unmerged.nobj.lua  object.nobj.lua  odb.nobj.lua  odb_backend.nobj.lua  odb_object.nobj.lua  oid.nobj.lua  oid_shorten.nobj.lua  pre_generated-git2.nobj.c  rawobject.nobj.lua  reference.nobj.lua  repository.nobj.lua  revwalk.nobj.lua  signature.nobj.lua  strarray.nobj.lua  tag.nobj.lua  tree.nobj.lua  tree_entry.nobj.lua
tests/: test_backend.lua  test_rep.lua
